--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,54 @@
-click==6.6
-Flask==0.11.1
+acme==0.8.1
+Adafruit-BBIO==0.0.30
+astroid==1.2.1
+blinker==1.3
+bmap-tools==3.2
+certbot==0.8.1
+cffi==1.4.2
+chardet==2.3.0
+colorama==0.3.2
+ConfigArgParse==0.10.0
+configobj==5.0.6
+cryptography==1.3.4
+enum34==1.0.3
+Flask==0.10.1
+flup==1.0.2
+funcsigs==0.4
+html5lib==0.999
+idna==2.0
+ipaddress==1.0.16
 itsdangerous==0.24
-Jinja2==2.8
+iw-parse==0.0.2
+Jinja2==2.7.3
+logilab-common==0.62.0
 MarkupSafe==0.23
-uWSGI==2.0.13.1
-Werkzeug==0.11.11
+mock==1.3.0
+ndg-httpsclient==0.3.2
+numpy==1.8.2
+parsedatetime==1.4
+pbr==1.8.0
+ply==3.4
+psutil==4.1.0
+pyasn1==0.1.9
+PyBBIO==0.10
+pycparser==2.10
+Pygments==2.0.1
+pygobject==3.14.0
+pygpgme==0.3
+PyICU==1.8
+pyinotify==0.9.4
+pylint==1.3.1
+pyOpenSSL==16.0.0
+pyRFC3339==1.0
+pyserial==3.0.1
+python2-pythondialog==3.3.0
+pytz==2012rc0
+requests==2.11.1
+serbus==1.0.4
+six==1.9.0
+urllib3==1.9.1
+virtualenv==15.0.3
+Werkzeug==0.9.6
+zope.component==4.2.1
+zope.event==4.0.3
+zope.interface==4.1.1
